tests/baselines/reference/protoAssignment.errors.txt
tests/cases/compiler/protoAssignment.ts(1,26): error TS2304: Cannot find name 'Comparable'.


==== tests/cases/compiler/protoAssignment.ts (1 errors) ====
    interface Number extends Comparable<number> {
                             ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Comparable'.
    
        compareTo(other: number);
    
    }
    
    Number.prototype.compareTo = function (other: number) {
    
       return this.valueOf() == other;
    
    }
    
     
    